<resources>
    <string name="app_name">Reach</string>

    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Login</string>

    <!-- Login -->
    <string name="login_login">Login</string>
    <string name="login_or">Or</string>
    <string name="login_skip">Skip ></string>

    <!-- LoginSplash -->
    <string name="title_activity_login_splash">LoginSplash</string>

    <!-- SetUp -->
    <string name="title_activity_setup1">Setup</string>
    <string name="setup_heading">Let\'s get started</string>
    <string name="setup_next_button">Next ></string>

    <!-- Setup1 -->
    <string name="setup1_home_location">Home location</string>
    <string name="setup1_work_location">Work location</string>
    <string name="setup1_step">Step 1 of 2</string>

    <!-- Setup2 -->
    <string name="setup2_leave_home">I leave home at</string>
    <string name="setup2_leave_work">I leave work at</string>
    <string name="setup2_step">Step 2 of 2</string>
    <string name="setup2_done">Done</string>
    <string name="setup2_home_time">9:00 am</string>
    <string name="setup2_work_time">5:00 pm</string>
    <string name="title_activity_setup2">Setup2</string>
    <string name="title_activity_reward">reward</string>
    <string name="title_activity_avatar">Avatar</string>
    <string name="title_activity_social">Social</string>
    <string name="title_activity_medal">Medal</string>
    <string name="title_activity_map">Map</string>

</resources>
